fixed the overflow in anime.html

--- a/static/css/anime.css
+++ b/static/css/anime.css
@@ -1,6 +1,3 @@
-body {
-    overflow-x: hidden;
-}
 .episode-options {
     display: flex;
     justify-content: center;
