--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -43,7 +43,6 @@ option {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
     padding: 10px 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
